# Diplomski

./: .gitignore  .~lock.Diplomski2.docx#  .~lock.dpl2.docx#  .~lock.Дипломски2.docx#  Dipl.docx  Dipl.txt  Дипломски (copy).docx  Дипломски.docx  Дипломски.rar  Дипломски1.docx
Client/: Client.pro  chat.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.cpp  client.h  client.ui  logindialog.cpp  logindialog.h  logindialog.ui  myclient.cpp  myclient.h  mycrypt.cpp  mycrypt.h  myserver.cpp  myserver.h  sslclient.cpp  sslclient.h
Screenshots/: 1  10
Server/: Server.pro  cert.crt  clientarray.cpp  clientarray.h  clientslist.h  myclient.cpp  myclient.h  myclientarray.cpp  mycrypt.cpp  mycrypt.h  myrunnable.cpp  myrunnable.h  myserver.cpp  myserver.h  mytask.cpp  mytask.h  mytherad.cpp  mytherad.h  server.cpp  server.h  server.ui
build-Client-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Client  Makefile  moc_chat.cpp  moc_chatwindow.cpp  moc_client.cpp  moc_logindialog.cpp  moc_myclient.cpp  moc_myserver.cpp  moc_sslclient.cpp  ui_chat.h  ui_chatwindow.h  ui_client.h  ui_logindialog.h
build-Server-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  Server  moc_myclient.cpp  moc_myserver.cpp  moc_mytask.cpp  moc_server.cpp  ui_server.h
docs/: Дипломски.docx
docs/Screenshots/: 9
new/src/: .clang-format  .clang-tidy  CMakeLists.txt
new/src/client/: CMakeLists.txt  main.cpp
new/src/cmake/: clang_setup.cmake  common_setup.cmake  doxygen_setup.cmake  gcc_setup.cmake  msvc_setup.cmake
new/src/lib/: CMakeLists.txt  caeserencryptor.hpp  common.hpp
new/src/lib/tests/: CMakeLists.txt  caeserencryptor_test.hpp  tests.cpp
new/src/server/: CMakeLists.txt  main.cpp
old/Client/: chat.cpp  chat.h  chatwindow.cpp  chatwindow.h  client.ui  logindialog.h  main.cpp  myclient.h
old/Server/: Server.pro  cert.key  clientarray.cpp  main.cpp  myclientarray.h  mycrypt.cpp  mycrypt.h  myserver.cpp  myserver.h  mytask.cpp
